[package]
name = "imgur-dl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.17", features = ["blocking", "json"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
clap = "3.2.25"